--- a/pom.xml
+++ b/pom.xml
@@ -108,13 +108,13 @@
     </build>
 
     <distributionManagement>
-        <repository>
-            <id>maven-releases</id>
-            <url>http://3.90.185.65:8081/repository/maven-releases/</url>
-        </repository>
-            <id>maven-snapshots</id>
-           <url> http://3.90.185.65:8081/repository/maven-releases/</url>
-        </snapshotRepository>
-    </distributionManagement>
+    <repository>
+        <id>maven-releases</id>
+        <url>http://3.90.185.65:8081/repository/maven-releases/</url>
+    </repository>
+    <snapshotRepository>
+        <id>maven-snapshots</id>
+        <url>http://3.90.185.65:8081/repository/maven-snapshots/</url>
+    </snapshotRepository>
+</distributionManagement>
 
-</project>
