--- a/pom.xml
+++ b/pom.xml
@@ -106,12 +106,14 @@
             </plugin>
         </plugins>
     </build>
+    
+<distributionManagement>
+    <repository>
+        <id>maven-releases</id>
+        <url>http://3.90.185.65:8081/repository/maven-releases/</url>
+    </repository>
+</distributionManagement>
 
-    <distributionManagement>
-        <repository>
-            <id>maven-releases</id>
-            <url>http://3.90.185.65:8081/repository/maven-releases/</url>
-        </repository>
         <snapshotRepository>
             <id>maven-snapshots</id>
             <url>http://3.90.185.65:8081/repository/maven-snapshots/</url>
