--- a/deployment-service.yaml
+++ b/deployment-service.yaml
@@ -30,7 +30,7 @@ spec:
   selector:
     app: boardgame
   ports:
-    - protocol: "TCP"
+    - protocol: TCP
       port: 8080 # The port that the service is running on in the cluster
       targetPort: 8080 # The port exposed by the service
   type: LoadBalancer # type of the service.
